Fix long unbroken word in annotation row causing overflow
Fixes #4212

--- a/scss/elements/_annotationRow.scss
+++ b/scss/elements/_annotationRow.scss
@@ -35,6 +35,7 @@ annotation-row {
 			-webkit-box-orient: vertical;
 			-webkit-line-clamp: 9;
 			overflow: hidden;
+			overflow-wrap: anywhere;
 		}
 		
 		.quote {
